--- a/index.html
+++ b/index.html
@@ -43,12 +43,22 @@
 #areaA {
     align-content: center;
     text-align: center;
-    background-color: rgb(255, 199, 255);
+    background-color: white;
 }
 
 #areaB {
   background-color: lightgray;
 }
+
+#colores {
+    color: rgba(255,94,148,1) ;
+}
+
+#justificado {
+    text-align:justify;
+    text-justify:values;
+}
+
     </style>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   
@@ -90,15 +100,15 @@
   
     <div id="grid">
         <div id="areaA">
-            <h2>
+            <h2 id="colores">
                 Quienes Somos 
             </h2>
-            <p><h4>Somos una empresa que se preocupa por las mascotas que no tienen la misma suerte que las que tienen un hogar, por esta misma razón, decidimos emprender 
+            <p><h4 id="justificado">Somos una empresa que se preocupa por las mascotas que no tienen la misma suerte que las que tienen un hogar, por esta misma razón, decidimos emprender 
                 una idea que vino a la mente de uno de nuestros desarrolladores para así poder ayudar a miles de mascotas que se encuentran en situación de calle y mismas 
                 que se encuentran en un refugio de escasos recursos.</h4></p>
-            <p><h2>Nuestro objetivo</h2></p>
+            <p><h2 id="colores">Nuestro objetivo</h2></p>
             <p> </p>
-            <p><h4>Nuestro objetivo es crear una aplicación con la intención de facilitar la manera en que se puede adoptar una mascota, ya que mediante muchos estudios que 
+            <p><h4 id="justificado">Nuestro objetivo es crear una aplicación con la intención de facilitar la manera en que se puede adoptar una mascota, ya que mediante muchos estudios que 
                 realizamos, nos dimos cuenta que la mayoría de la sociedad no tiene idea de donde puede adoptar una mascota rescatada de la calle, habiendo demasiados refugios 
                 de mascotas rescatadas, los cuales no tienen mucho apoyo económico por lo que igual manera se les dificulta mantener a todos las mascotas rescatadas. De esta 
                 manera nos interesó apoyar a las causas que envuelven a todos los afectados en este tema, por eso decidimos lanzar Maskotinder, una aplicación que reconoce a 
@@ -150,3 +160,4 @@
     <link rel="stylesheet" href="bootstrap.css">
 </body>
 </html>
+
