--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 #areaA {
     align-content: center;
     text-align: center;
-    background-color: blue;
+    background-color: white;
 }
 
 #areaB {
