--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
 }
 
 #areaA {
+    margin-left: 35px;
+    margin-right: 35px;
     align-content: center;
     text-align: center;
     background-color: white;
@@ -91,6 +93,10 @@
                     <a class="nav-link" href="Configuración.html"> <i class="fa fa-cog" aria-hidden="true"></i> Configuración</a>
                 </li>
             </li>
+                <li class="nav-item">
+                <!--BOTON Quienes somos -->
+                    <a class="nav-link active" href="http://maskobeanstalkk-env.eba-3bnmaiuw.us-east-1.elasticbeanstalk.com"><i class="fa fa-user-circle" aria-hidden="true"></i> Perfil</a>
+                </li>
             <!--BOTON Configuración -->
             <a class="nav-link" id="boton_logout" href="inicio.html"><i class="fas fa-sign-out-alt" aria-hidden="true"></i> Cerrar sesión</a>
         </li>
