--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             </li>
                 <li class="nav-item">
                 <!--BOTON Quienes somos -->
-                    <a class="nav-link active" href="http://maskobeanstalkk-env.eba-3bnmaiuw.us-east-1.elasticbeanstalk.com"><i class="fa fa-user-circle" aria-hidden="true"></i> Perfil</a>
+                    <a class="nav-link active" href="http://maskobeanstalkk-env.eba-3bnmaiuw.us-east-1.elasticbeanstalk.com"><i class="fa fa-user-circle" aria-hidden="true"></i>Quienes somos</a>
                 </li>
             <!--BOTON Configuración -->
             <a class="nav-link" id="boton_logout" href="inicio.html"><i class="fas fa-sign-out-alt" aria-hidden="true"></i> Cerrar sesión</a>
