--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   <body class="pantalla_principal">
     <!-- Barra de navegación -->
     <nav id="IDnavbar" class="navbar navbar-expand-sm navbar-dark">
-        <a class="navbar-brand" href="principal.html"> <img src="https://maskotinder-rkh.s3.amazonaws.com/imagenes/logo_horizontal.png" alt="+kotinder"></a>
+        <a class="navbar-brand" href="http://ec2-3-90-149-16.compute-1.amazonaws.com:8888/principal.html"> <img src="https://maskotinder-rkh.s3.amazonaws.com/imagenes/logo_horizontal.png" alt="+kotinder"></a>
         <!--BOTON +KOTINDER -->
         <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
             aria-expanded="false" aria-label="Toggle navigation">
@@ -79,23 +79,27 @@
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                 <li class="nav-item">
                 <!--BOTON PERFIL -->
-                    <a class="nav-link" href="perfil.html"><i class="fa fa-user-circle" aria-hidden="true"></i> Perfil</a>
+                    <a class="nav-link" href="http://ec2-3-90-149-16.compute-1.amazonaws.com:8888/perfil.html"><i class="fa fa-user-circle" aria-hidden="true"></i> Perfil</a>
                 </li>
                 <li class="nav-item">
                 <!--BOTON Favoritos -->
-                    <a class="nav-link" href="favoritos.html"><i class="fa fa-star" aria-hidden="true"></i> Favoritos</a>
+                    <a class="nav-link" href="http://ec2-3-90-149-16.compute-1.amazonaws.com:8888/favoritos.html"><i class="fa fa-star" aria-hidden="true"></i> Favoritos</a>
                 </li>
                 <li class="nav-item">
                     <!--BOTON Mensajes -->
-                        <a class="nav-link" href="adopciones.html"> <i class="fa fa-paw" aria-hidden="true"></i> Adopciones</a>
+                        <a class="nav-link" href="http://ec2-3-90-149-16.compute-1.amazonaws.com:8888/adopciones.html"> <i class="fa fa-paw" aria-hidden="true"></i> Adopciones</a>
                     </li>
                     <!--BOTON Configuración -->
-                    <a class="nav-link" href="Configuración.html"> <i class="fa fa-cog" aria-hidden="true"></i> Configuración</a>
+                    <a class="nav-link" href="http://ec2-3-90-149-16.compute-1.amazonaws.com:8888/Configuración.html"> <i class="fa fa-cog" aria-hidden="true"></i> Configuración</a>
                 </li>
             </li>
                 <li class="nav-item">
                 <!--BOTON Quienes somos -->
                     <a class="nav-link active" href="http://maskobeanstalkk-env.eba-3bnmaiuw.us-east-1.elasticbeanstalk.com"><i class="fa fa-user-circle" aria-hidden="true"></i>Quienes somos</a>
+                </li>
+              <li class="nav-item">
+                <!--BOTON Mascotas -->
+                    <a class="nav-link" href="http://ec2-3-90-149-16.compute-1.amazonaws.com:8888/mascotas.html"><i class="fa fa-check" aria-hidden="true"></i>Mascotas</a>
                 </li>
             <!--BOTON Configuración -->
             <a class="nav-link" id="boton_logout" href="inicio.html"><i class="fas fa-sign-out-alt" aria-hidden="true"></i> Cerrar sesión</a>
